--- a/Учеба.ipynb
+++ b/Учеба.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8ShGOrsu3q6NCd8VJEB0V",
+      "authorship_tag": "ABX9TyNY9VACx1zPU4SHU3zuljLY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2375,7 +2375,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df.isnull().loc[x[\"Имя\"] == True]"
+        "df.isnull().loc[x[\"Возраст\"] == True]"
       ],
       "metadata": {
         "colab": {
@@ -2383,20 +2383,20 @@
           "height": 81
         },
         "id": "bYxMFVdwI32w",
-        "outputId": "c8ffbc5c-c84e-402e-ba8c-86aeb89a7b19"
+        "outputId": "50612747-176e-42a3-f128-2826eabe698d"
       },
-      "execution_count": 56,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "    Имя  Возраст\n",
-              "2  True    False"
+              "     Имя  Возраст\n",
+              "3  False     True"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-93580148-5618-41d8-a761-b0d45fc8740f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f7dc6870-7e61-4e05-a6f6-c94655836fc1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2421,9 +2421,9 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>True</td>\n",
+              "      <th>3</th>\n",
               "      <td>False</td>\n",
+              "      <td>True</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -2431,7 +2431,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-93580148-5618-41d8-a761-b0d45fc8740f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f7dc6870-7e61-4e05-a6f6-c94655836fc1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2483,12 +2483,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-93580148-5618-41d8-a761-b0d45fc8740f button.colab-df-convert');\n",
+              "        document.querySelector('#df-f7dc6870-7e61-4e05-a6f6-c94655836fc1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-93580148-5618-41d8-a761-b0d45fc8740f');\n",
+              "        const element = document.querySelector('#df-f7dc6870-7e61-4e05-a6f6-c94655836fc1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2512,7 +2512,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 57
         }
       ]
     },
